@@ -1,3 +1,7 @@
+Fri Feb 21 23:03:39 2014  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* tool/redmine-backporter.rb: added to handle redmine tickets.
+
 Fri Feb 21 20:42:01 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* class.c (rb_mod_init_copy): do nothing if copying self.
